# EDDA

./: CMakeLists.txt  EDDA.cpp  cut.py
data/: test0.edda  test1.edda  test2.edda  test3.edda  test4.edda  test5.edda  test6.edda  test7.edda
dataset/: DataSet.h  DistributionArray.h  Grid.h
distribution/: Distribution.h  Histogram.h
io/: load.h
